--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "firebase": "^12.2.1",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
